# Axis

./: .gitignore  AGENTS.md  BUILD_LOG.md  READ_FIRST.md  ROADMAP.md  SKILLS.md  SPECIFICATION.md  THEMES.md  pyproject.toml
.github/workflows/: python-tests.yml
agent-definitions/: README.md
agent-definitions/agents/agriculture-expert/: AGENTS.md  IDENTITY.md
agent-definitions/agents/ai-expert/: AGENTS.md  IDENTITY.md  TOOLS.md
agent-definitions/agents/calendar-catalyst-watch/: AGENTS.md  IDENTITY.md  TOOLS.md
agent-definitions/agents/central-banks-expert/: AGENTS.md  IDENTITY.md
agent-definitions/agents/chemicals-expert/: AGENTS.md  IDENTITY.md
agent-definitions/agents/company-project-watch/: AGENTS.md  IDENTITY.md  TOOLS.md
agent-definitions/agents/x-watch/: AGENTS.md  (+2 more)
agent-state/: README.md
docs/architecture/: OPENCLAW_PROGRAMMERS_GUIDE.md  analytical-desk-operating-guide.md  artifact-model.md  deferred-implementation-boundaries.md  domain-desk-operating-guide.md  editorial-consumption.md  expert-reward-function.md  guide-authoring-rules.md  implementation-reading-order.md  linking-model.md  memory-model.md  publication-attribution.md  publication-item-operating-guide.md  report-watch.md  research-desk-operating-guide.md  retrieval-policy.md  signal-desk-operating-guide.md  signal-ingestion.md  term-boundaries.md
docs/implementation/: THEMES_ARCHIVE.md  desk-and-expert-roster.md  signal-interest-routing-note.md
src/axis/: __init__.py
tests/: conftest.py  test_message_mailbox.py  test_requests.py  test_schema_bootstrap.py  test_signal_routing.py
(+102 files in other folders)
